# MicroHWMonitor

./: .gitignore  CMakeLists.txt  README.md
include/: data_source.hpp  read_write.hpp  reader.hpp  sensor_poller.hpp  transform.hpp
src/: data_source.cpp  main.cpp  read_write.cpp  reader.cpp  transform.cpp
test/: data.txt  gen.py  main.cpp
